--- a/authentication/templates/authentication/register.html
+++ b/authentication/templates/authentication/register.html
@@ -2,11 +2,13 @@
 {% load static %}
 
 {% block content %}
-<h1>RSS Tool Register</h1>
+<h1>RSS Tool. Registration</h1>
+<div class="alert alert-secondary" role="alert">
+    Already registered? <a href="{% url 'login' %}" class="badge badge-info">Login</a>
+</div>
 <form method="POST" class="post-form">{% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Register</button>
 </form>
-<div>Already registered? <a href="{% url 'login' %}">Login</a></div>
 
 {% endblock %}
