--- a/sendcloud/templates/base.html
+++ b/sendcloud/templates/base.html
@@ -15,18 +15,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/">SendCloud</a>
     {% if user.is_authenticated %}
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Nav Item</a>
-      </li>
-    </ul>
-  <a href="/logout/"><button class="btn btn-outline-danger" type="button">LogOut</button></a>
-  </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Nav Item</a>
+          </li>
+        </ul>
+          <span>Welcome, <a href="#">{{ user.email }}</a></span>
+          <a href="/logout/"><button class="btn btn-outline-danger" type="button">LogOut</button></a>
+      </div>
     {% endif %}
 </nav>
 
