--- a/authentication/templates/registration/login.html
+++ b/authentication/templates/registration/login.html
@@ -2,10 +2,10 @@
 {% load static %}
 
 {% block content %}
-<h1>RSS Tool. Login</h1>
 <div class="alert alert-secondary" role="alert">
     Not registered? <a href="{% url 'register' %}" class="badge badge-info">Registration</a>
 </div>
+<h1>RSS Tool. Login</h1>
 {% if error %}
     <div class="alert alert-danger" role="alert">
       {{ error }}
@@ -13,7 +13,7 @@
 {% endif %}
 <form method="POST" class="post-form">{% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-success">Login</button>
 </form>
 
 {% endblock %}
