--- a/sendcloud/templates/base.html
+++ b/sendcloud/templates/base.html
@@ -14,30 +14,42 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/">SendCloud</a>
-    {% if user.is_authenticated %}
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      {% if user.is_authenticated %}
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Nav Item</a>
+            <a class="nav-link" href="{% url 'rss:explore' %}">Explore</a>
           </li>
         </ul>
           <span>Welcome, <a href="#">{{ user.email }}</a></span>
           <a href="/logout/"><button class="btn btn-outline-danger" type="button">LogOut</button></a>
+      {% else %}
+          <ul class="navbar-nav mr-auto">
+          </ul>
+          <a href="/login/"><button class="btn btn-outline-success" type="button">Login</button></a>
+          <a href="/register/"><button class="btn btn-outline-info" type="button">Register</button></a>
+      {% endif %}
       </div>
-    {% endif %}
 </nav>
 
 <div class="container">
-{% block content %}
-{% endblock %}
+    {% if messages %}
+        {% for m in messages %}
+            <div class="alert alert-success" role="alert">
+                {{ m }}
+            </div>
+        {% endfor %}
+    {% endif %}
+
+    {% block content %}
+    {% endblock %}
 </div>
 
 {% block additional_scripts %}
-
 {% endblock %}
 </body>
 </html>
