--- a/sendcloud/templates/base.html
+++ b/sendcloud/templates/base.html
@@ -22,6 +22,9 @@
       {% if user.is_authenticated %}
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'rss:index' %}">My Feeds</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'rss:explore' %}">Explore</a>
           </li>
           <li class="nav-item">
